@@ -1,13 +1,20 @@
-2009-12-05 Norbert Sendetzky <norbert@linuxnetworks.de>
+2009-12-06 Norbert Sendetzky <norbert@linuxnetworks.de>
 
+	* Feature: Implemented ODBX_ERR_BUSY if odbx_query() is called before all result sets are fetched
 	* Feature: Added odbx_field_isnull() and Result::fieldIsNull() functions to check for NULL values
 	* Feature: Fully compatible with Debian standard version 3.8.2.0
 	* Feature: Added ability to version symbols with ./configure --enable-versioned-symbols
 	* Feature: Added configurable logging possibility for debug output
+	* Feature: Added config file for ldconfig to search in libdir/opendbx for backend libraries
+	* Feature: Added possibility to define the number of connections in regression tests
 	* Change: Moved library handling functions to header file and declared them static
+	* Change: Changed mysql_real_connect options so odbx_rows_affected() is more in line with other backends
+	* Change: Moved package name to libopendbx to ease packaging for distributions
+	* Change: Versioned pkgconfig files
 	* Bugfix: Removed ODBC connection attributes which don't work with Windows ODBC
 	* Bugfix: Fixed wrong error severity in mssql backend when connection couldn't be established
 	* Bugfix: Fixed wild pointer in oracle backend that my lead to problems when error handling isn't implemented correctly
+	* Bugfix: Fixed max error constant so last error message will be correct
 
 2009-06-02 Norbert Sendetzky <norbert@linuxnetworks.de>
 
